[project]
name = "basic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.10.0",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.18",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.7",
    "langchain>=0.3.19",
    "llama-index-llms-huggingface>=0.4.2",
    "llama-index>=0.12.20",
    "openai>=1.64.0",
    "pypdf>=5.3.0",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.42.2",
    "tiktoken>=0.9.0",
]
